--- a/ios_connector/index.html
+++ b/ios_connector/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
 <script>
-function loaded()
-{
-    
-	CloseMe();
-}
-
 function CloseMe() 
 {
     window.close();
 }
 </script>
 </head>
-<body onLoad="loaded()">
+<body onLoad="CloseMe">
 Hello from root!
 </body>
