--- a/ios_connector/index.html
+++ b/ios_connector/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-function CloseMe() 
-{
-    window.close();
-}
-</script>
 </head>
-<body onLoad="CloseMe">
+<body onLoad="window.close()">
 </body>
